--- a/shero/pom.xml
+++ b/shero/pom.xml
@@ -53,7 +53,12 @@
 			<artifactId>gson</artifactId>
 			<version>2.3</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.googlecode.objectify</groupId>
+			<artifactId>objectify</artifactId>
+			<version>5.1.3</version>
+		</dependency>
+		
         <!-- Test Dependencies -->
         <dependency>
             <groupId>com.google.appengine</groupId>
