--- a/shero/pom.xml
+++ b/shero/pom.xml
@@ -72,6 +72,11 @@
             <version>${appengine.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+	<groupId>joda-time</groupId>
+	<artifactId>joda-time</artifactId>
+	<version>2.8.2</version>
+</dependency>
     </dependencies>
 
     <build>
