--- a/shero/pom.xml
+++ b/shero/pom.xml
@@ -77,6 +77,11 @@
 	<artifactId>joda-time</artifactId>
 	<version>2.8.2</version>
 </dependency>
+<dependency>
+	<groupId>log4j</groupId>
+	<artifactId>log4j</artifactId>
+	<version>1.2.17</version>
+</dependency>
     </dependencies>
 
     <build>
