--- a/shero/src/main/webapp/WEB-INF/web.xml
+++ b/shero/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,17 @@
 		<servlet-name>Jersey REST Service</servlet-name>
 		<url-pattern>/rest/*</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+   <servlet-name>UploadServlet</servlet-name>
+   <servlet-class>edu.upc.ase.service.PictureUploadService</servlet-class>
+</servlet>
+
+<servlet-mapping>
+   <servlet-name>UploadServlet</servlet-name>
+   <url-pattern>/UploadServlet</url-pattern>
+</servlet-mapping>
+	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
