--- a/shero/pom.xml
+++ b/shero/pom.xml
@@ -58,6 +58,12 @@
 			<artifactId>objectify</artifactId>
 			<version>5.1.3</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.2</version>
+		</dependency>
+		
 		
         <!-- Test Dependencies -->
         <dependency>
